testdata/invalid/invalid_union_duplicate_name.bop
union Test {
	1 -> message foo{}
	2 -> message foo{}
}